# progetto

./: Dati_Meteo_Venezia.csv  Home.py  README.md  functions.py  pyproject.toml
daticsv/: Stazione_Burano.csv  Stazione_ChioggiaCitta.csv  Stazione_ChioggiaPorto.csv  Stazione_DigaNordMalamocco.csv  Stazione_DigaSudChioggia.csv  Stazione_DigaSudLido.csv  Stazione_Fusina.csv  Stazione_LagunaNord.csv  Stazione_MalamoccoPorto.csv  Stazione_Misericordia.csv  Stazione_PalazzoCavalli.csv  Stazione_Piattaforma.csv  Stazione_PuntaSalute_CanalGrande.csv  Stazione_SanGiorgio.csv
pages/: Data.py  Example.py
