[project]
name = "progetto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "altair>=5.5.0",
    "icecream>=2.1.3",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "polars>=1.16.0",
    "pydeck>=0.9.1",
    "streamlit>=1.40.2",
]
